objects/geopointe__GP_Calendar_Object_Location__c.object
<CustomObject>
    <description>Association of Geopointe Calendar Object to a Map Object so that we can locate the calendar items.</description>
    <fields>
        <fullName>geopointe__Geopointe_Calendar_Object__c</fullName>
        <label>Geopointe Calendar Object</label>
        <referenceTo>geopointe__GP_Calendar_Object__c</referenceTo>
        <relationshipLabel>Geopointe Calendar Object Locations</relationshipLabel>
        <relationshipName>Geopointe_Calendar_Object_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Map_Object_Name__c</fullName>
        <description>The Geopointe Map object to use for mapping the calendar items.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Map Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Precedence__c</fullName>
        <inlineHelpText>Order of precendence to determine location</inlineHelpText>
        <label>Precedence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Relationship_Field__c</fullName>
        <description>Defines the field used to link a Calendar Item to an Object. The lookup field must point to an object that is also configured as a Geopointe Map Object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Relationship_SObject_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Calendar Object Location</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Calendar Object Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>